--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
     }
 
     h1 {
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       color: #b30059;
+    }
+
+    .valentine-gif {
+      width: 250px;
+      max-width: 90%;
+      border-radius: 16px;
+      margin-bottom: 30px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
     }
 
     #buttons {
@@ -54,6 +62,7 @@
 </head>
 <body>
   <h1>Willst du mein Valentinstags-Date sein? 💖</h1>
+  <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExOXIydWx1aHIyY3ZyanUwdWwwZjA3Y3QzeTR0MWtvNTRxNWpoYjIxNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Zl7u48zLVFgLpRwq6f/giphy.gif" alt="Cute Valentine GIF" class="valentine-gif">
 
   <div id="buttons">
     <button id="yesBtn">Ja 💕</button>
