--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     yesBtn.addEventListener('click', () => {
       document.body.innerHTML = `
         <h1>Yaaay! 💘 Ich freue mich riesig! 🥰</h1>
-        <img src="images/me.jpeg" alt="Ich 😌" class="valentine-gif">
+        <img src="me.jpeg" alt="Me now 🥰" class="valentine-gif">
         <form id="loveForm" action="https://formspree.io/f/mjgekbqk" method="POST" style="margin-top:20px; text-align:center;">
           <label style="font-size:18px; color:#b30059;">Restaurantwunsch?</label><br><br>
           <input type="text" name="message" placeholder="z.B. Italienisch 🍝" required
